--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family:  'TS-Regular', 'Open Sans', sans-serif;
     font-size: 14px;
@@ -13,15 +14,27 @@ footer {
     max-width: 960px;
     margin: 0 auto;
 }
+    article.thankYou {
+        text-align: center;
+    }
 
 footer {
-    /*width: 100%;*/
-    position: absolute;
-    bottom: 10px;
+    max-width: 100%;
+    width: 100%;
+    position: relative;
+    height: 50px;
     font-size: 0.9em;
     text-align: center;
-    display: none;
 }
+    footer p {
+        width: 100%;
+        position: absolute;
+        bottom: 5px;
+    }
+    footer.sticky {
+        position: absolute;
+        bottom: 0;
+    }
 
 hr {
     background-color: #d9d9d9;
@@ -56,6 +69,12 @@ h1, h2, h3, h4, h5 {
         text-align: center;
         line-height: 1.1em;
     }
+        .thankYou {
+            width: 640px;
+        }
+    h4 {
+        color: #009ee9;
+    }
 
 p {
     /*margin-bottom: 1.2em;*/
@@ -74,14 +93,20 @@ a:hover {
     -webkit-transition: all 180ms ease-in;
 }
 
-
-
-input[type="text"], input[type="password"], input[type="email"], select {
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
     padding: 13px 11px;
     margin-bottom: 15px;
 }
     select {
-        width: 310px;
+        width: 420px;
+    }
+    textarea {
+        font-size: 1.1em;
+        line-height: 1.5em;
     }
 
 button, input[type="submit"], .button {
@@ -119,12 +144,47 @@ button, input[type="submit"], .button {
         transition: background 180ms ease-in, color 180ms ease-in;
         -webkit-transition: background 180ms ease-in, color 180ms ease-in;
     }
+        .buttonLeftMargin {
+            margin-left: 20px;
+        }
+        .buttonLeftMarginSmall {
+            margin-left: 10px;
+        }
+        .smaller {
+            height: 45px;
+            line-height: 3em;
+        }
+        .sameSize {
+            width: 20px;
+            text-align: center;
+        }
 
 
 
 .hidden {
     display: none;
 }
+.right {
+    float: right;
+}
+.left {
+     float: left;
+}
+.inline {
+    display: inline-block;
+}
+.clearBoth {
+    clear: both;
+}
+.clearFix:before,
+.clearFix:after {
+    content: '';
+    display: table;
+}
+.clearFix:after {
+    clear: both;
+}
+
 
 
 .selectPersonType, .selectActionType {
@@ -138,8 +198,8 @@ button, input[type="submit"], .button {
 
 }
 
-.formNewData {
-    display: none;
+.formData {
+    /*display: none;*/
     position: relative;
 }
 
@@ -213,12 +273,39 @@ button, input[type="submit"], .button {
     .inputFields {
         width: 450px;
         float: left;
+        padding-bottom: 30px;
+        padding-right: 20px;
+        border-right: 1px solid lightgray;
     }
     .infoText {
         width: 450px;
-        padding-left: 10px;
+        padding-left: 5px;
         display: inline-block;
         float: left;
         margin-left: 20px;
-        border-left: 1px solid lightgray;
+        margin-top: 5px;
     }
+    .checkYourData label {
+        display: block;
+        padding-left: 25px;
+        text-indent: -28px;
+    }
+    .checkYourData input[type="checkbox"] {
+        width: 25px;
+        height: 15px;
+        padding: 0;
+        margin:0;
+        vertical-align: middle;
+        position: relative;
+        top: 0;
+        overflow: hidden;
+    }
+    .submitBtn {
+        text-align: center;
+    }
+
+
+#workFields {
+    float: left;
+    width: 425px;
+}
